<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.google.login.RegisterFragment"
    android:background="@mipmap/bg" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linlay_registerform"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/linlay_terms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/prompt_username"
                android:textColor="@color/cp_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cp_green"
                android:ems="10"
                android:inputType="text"
                android:singleLine="true"
                android:textCursorDrawable="@color/cp_green" />

            <TextView
                android:id="@+id/txtv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/prompt_completename"
                android:textColor="@color/cp_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cp_green"
                android:ems="10"
                android:inputType="text"
                android:textCursorDrawable="@color/cp_green" />

            <TextView
                android:id="@+id/txtv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/prompt_email"
                android:textColor="@color/cp_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cp_green"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@color/cp_green" />

            <TextView
                android:id="@+id/txtv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/prompt_password"
                android:textColor="@color/cp_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:backgroundTint="@color/cp_green"
                android:ems="10"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/cp_green"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/txtv_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/prompt_birth"
                android:textColor="@color/cp_white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/ed_birthdate"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/cp_green"
                    android:ems="10"
                    android:hint="DD/MM/YYYY"
                    android:inputType="date"
                    android:textCursorDrawable="@color/cp_green" />

                <Button
                    android:id="@+id/btn_datePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cp_green"
                    android:text=""
                    android:insetLeft="4dp"
                    android:insetRight="4dp"
                    app:icon="@drawable/calendar"
                    app:iconGravity="textEnd"
                    app:iconTint="@color/cp_yellow" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linlay_registerform">

            <CheckBox
                android:id="@+id/chb_terms"
                style="@style/Widget.Material3.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="?android:attr/listChoiceIndicatorMultiple"
                android:buttonTint="@color/cp_green"
                android:checked="false"
                android:fontFamily="@font/roboto"
                android:text="@string/terms"
                android:textColor="@color/cp_white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:buttonIconTint="@color/cp_yellow" />

            <CheckBox
                android:id="@+id/chb_privacy"
                style="@style/Widget.Material3.CompoundButton.CheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="?android:attr/listChoiceIndicatorMultiple"
                android:buttonTint="@color/cp_green"
                android:checked="false"
                android:fontFamily="@font/roboto"
                android:text="@string/privacy"
                android:textColor="@color/cp_white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:buttonIconTint="@color/cp_yellow" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cp_yellow"
                android:fontFamily="@font/roboto"
                android:text="@string/action_sign_up"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>