<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.google.login.LoginFragment"
    android:background="@mipmap/bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="276dp"
            android:layout_height="288dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Space
                android:layout_width="match_parent"
                android:layout_height="41dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/prompt_email"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/cp_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ed_Email"
                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cp_white"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/prompt_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/cp_white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_Password"
                style="@style/Widget.Material3.TextInputEditText.FilledBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cp_white"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="272dp"
            android:layout_height="92dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cp_light_yellow"
                android:fontFamily="@font/roboto"
                android:text="@string/action_sign_in"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/cp_yellow"
                android:fontFamily="@font/roboto"
                android:text="@string/action_sign_up"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>